--- a/FinalProject_RyanWall/FinalProject_RyanWall/FinalProject_RyanWall.csproj
+++ b/FinalProject_RyanWall/FinalProject_RyanWall/FinalProject_RyanWall.csproj
@@ -208,6 +208,8 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\JsonFactory.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\ShoppingList.cs" />
     <Compile Include="Models\ToDoList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
